Check 1 opnieuw geschreven